--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="index.css">
     
     <title>TTShare</title>
@@ -16,7 +17,7 @@
 <body>
     <div class="titleDiv">
         <a  class="transparentHref" 
-            href="index.html">
+            href="">
             <h2 class="title">
                 TTShare
             </h2>
