uhh added sum info :)

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 
     <hr>
 
+    <div class="infoDiv">
+        <p>Type in the text that you want to convert to text</p>
+        <p>in the text box below. Hit <strong>PLAY</strong> to hear the audio</p>
+        <p>hit download to <strong>DOWNLOAD</strong> as a .mp3 file!</p>
+    </div>
+
     <div class="inputStrDiv">
         <textarea class="inputStr"
                   rows = "3"
@@ -43,7 +49,6 @@
     </div>
 
     <audio class="TTS"></audio>
-
     
 
     <script src="main.js"></script>
