share module done

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 
 <body>
-    <div class="titleDiv">
+    <div class="div titleDiv">
         <a  class="transparentHref" 
-            href="">
+            href="/">
             <h2 class="title">
                 TTShare
             </h2>
@@ -26,13 +26,13 @@
 
     <hr>
 
-    <div class="infoDiv">
-        <p>Type in the text that you want to convert to text</p>
-        <p>in the text box below. Hit <strong>PLAY</strong> to hear the audio</p>
-        <p>hit download to <strong>DOWNLOAD</strong> as a .mp3 file!</p>
+    <div class="div infoDiv">
+        <p>Type in the text that you want to convert to text
+        in the text box below. Hit <strong>PLAY</strong> to hear the audio
+        hit download to <strong>DOWNLOAD</strong> as a .mp3 file!</p>
     </div>
 
-    <div class="inputStrDiv">
+    <div class="div inputStrDiv">
         <textarea class="inputStr"
                   rows = "3"
                   cols = "80" 
@@ -40,16 +40,16 @@
                   maxlength="1000"></textarea>
     </div>
     
-    <div class="buttonDiv">
+    <div class="div buttonDiv">
         <button class="button playButton">Play</button>
         <button class="button downloadButton">Download</button>
     </div>
 
-    <div class="shareDiv">
+    <div class="div shareDiv">
         <button class="button copyButton">Copy Download Link</button>
     </div>
     
-    <div class="infoDiv">
+    <div class="div">
         <p>1000 Character Limit</p>
     </div>
 
