--- a/share.html
+++ b/share.html
@@ -14,9 +14,9 @@
 
 </head>
 <body>
-    <div class="titleDiv">
+    <div class="div titleDiv">
         <a  class="transparentHref" 
-            href="">
+            href="/">
             <h2 class="title">
                 TTShare
             </h2>
@@ -25,17 +25,23 @@
 
     <hr>
 
-    <div class="audioDiv">
-        <audio controls class="TTS"></audio>
+    <div class="div audioDiv">
+        <audio controls class="audioTTS"></audio>
     </div>
 
-    <div class="buttonDiv">
+    <div class="div buttonDiv">
         <button class="button downloadButtonLarge">download</button>
     </div>
 
-    <div class="shareDiv">
+    <div class="div shareDiv">
         <button class="button copyButtonLarge">Copy Download Link</button>
     </div>
+
+    <div class="div noIDDiv">
+        <p>Error: No ID specified, please return to <a href="/">main site</a></p>
+    </div>
+
+    <script src="share.js"></script>
 
 
 </body>
