--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
     
     <title>TTShare</title>
 </head>
@@ -63,7 +63,7 @@
         <!-- <p>API - Gee842</p> -->
     </div>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
