--- a/share.html
+++ b/share.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
 
     <title>TTShare</title>
 
@@ -41,7 +41,7 @@
         <p>Error: No ID specified, please return to <a href="/">main site</a></p>
     </div>
 
-    <script src="share.js"></script>
+    <script src="js/share.js"></script>
 
 
 </body>
